Risoluzione bug delete checkout

--- a/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
@@ -1,11 +1,11 @@
 ﻿@model CartViewModel
 @{
 	ViewData["Title"] = "Checkout Page";
-	Console.WriteLine("Carrello");
-	foreach (var item in Model.CartProducts)
-	{
-		Console.WriteLine(item.ProductName);
-	}
+	// Console.WriteLine("Carrello");
+	// foreach (var item in Model.CartProducts)
+	// {
+	// 	Console.WriteLine(item.ProductName);
+	// }
 }
 
 @{
