--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -47,11 +47,11 @@
         <nav class="navbar navbar-expand-md navbar-light box-shadow mb-3 nav-color">
             <div class="container-fluid">
                 <div class="col-md-2">
-                    <img src="~/img/logo.png" alt="logo" class="logo" />
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index"><img src="~/img/logo.png" alt="logo" class="logo" /></a>
                 </div>
                 <div class="col-md-8 text-center">
-                    <img src="/img/titolo.png">
-                    @*<a class="navbar-brand text-white fw-bolder fs-1 position-relative" asp-area="" asp-controller="Home" asp-action="Index">Epi-Tech</a>*@ 
+                    
+                    <a class="navbar-brand"  asp-controller="Home" asp-action="Index"><img src="/img/titolo.png"></a>
                 </div>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
                         aria-expanded="false" aria-label="Toggle navigation">
