--- a/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
@@ -36,9 +36,9 @@
 			<h3 class="text-white fw-bold">Checkout: @Model.TotalPrice.ToString("C") </h3>
 		</div>
 
-		<div>
-			<a class="btn btn-home" id="btnPaga">Paga!</a>
-		</div>
+		<form class="form-control" method="get" asp-controller="cart" asp-action="FinalizeCheckout">
+			<button type="submit" class="btn btn-home" id="btnPaga">Paga!</button>
+		</form>
 	} else
 	{
 		<div class="container-fluid text-center">
@@ -49,10 +49,10 @@
 
 }
 <script>
-	const btnPaga = document.getElementById('btnPaga');
+	// const btnPaga = document.getElementById('btnPaga');
 
-	btnPaga.addEventListener('click', () => {
-		alert('Pagamento effettuato con successo!');
-	});
+	// btnPaga.addEventListener('click', () => {
+	// 	alert('Pagamento effettuato con successo!');
+	// });
 
 </script>
