CssVario ed eventuale

--- a/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
@@ -26,9 +26,11 @@
 				</div>
 			</div>
 		</div>
+		
 	}
-
+	
 }
+
 @{
 	if(Model.TotalPrice != 0)
 	{
@@ -48,6 +50,21 @@
 	}
 
 }
+<span class="row g-0 mt-3">
+	<img class="img-fluid rounded carte" src="~/img/TrustPilot.png"  />
+	<img class="img-fluid rounded carte" src="~/img/ApplePay1.png"  />
+	<img class="img-fluid rounded carte" src="~/img/AmazonPay1.png" />
+	<img class="img-fluid rounded carte" src="~/img/Opay.png"/>
+	<img class="img-fluid rounded carte" src="~/img/Paypal1.png"/>
+	<img class="img-fluid rounded carte" src="~/img/maestro.png"/>
+	<img class="img-fluid rounded carte" src="~/img/Mastercard.png"/>
+	<img class="img-fluid rounded carte" src="~/img/g_pay.png"/>
+	<img class="img-fluid rounded carte" src="~/img/Visa.png"/>
+	<img class="img-fluid rounded carte" src="~/img/Amex.png"/>
+	<img class="img-fluid rounded carte" src="~/img/BonifBancario.png"/>
+	<img class="img-fluid rounded carte" src="~/img/Satispay.png"/>
+	<img class="img-fluid rounded carte" src="~/img/Stripe.png"/>
+</span>
 <script>
 	const btnPaga = document.getElementById('btnPaga');
 
