--- a/BUILD-WEEK-4_TEAM-7/wwwroot/css/site.css
+++ b/BUILD-WEEK-4_TEAM-7/wwwroot/css/site.css
@@ -165,3 +165,26 @@ footer a {
 .navbar-toggler-icon {
     background-image: url( "../img/MenuIcon.svg") !important;
 }
+
+/*carte*/
+
+
+.carte {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    width: 110px;
+    height: 50px;
+    box-shadow: 0px 1px 15px 5px #022AFF;
+}
+
+#btnPaga {
+    background-color: #4DFF4D;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+    width: 130px;
+    height: 50px;
+}
