--- a/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                     <div class="carousel-inner">
 
 
-                        
+                        // .Where(p => p.Stock != 0).ToList()
 
                         @for (int i = 0; i < productGroups.Count; i++)
                         {
