--- a/BUILD-WEEK-4_TEAM-7/Views/Cart/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Cart/Index.cshtml
@@ -27,7 +27,7 @@
 									</form>
 							
 								<div class="d-flex mt-3 justify-content-center">
-									<a asp-controller="Admin" asp-action="Details" asp-route-id="@cartProduct.IdProduct" class="btn btn-home2 me-3" style="width: fit-content; align-self: center">Dettagli</a>
+									<a asp-controller="Admin" asp-action="Details" asp-route-id="@cartProduct.IdProduct" class="btn btn-home2 btn-animation me-3" style="width: fit-content; align-self: center">Dettagli</a>
 									<a class="btn btn-danger" style="width: fit-content; align-self: center" asp-controller="Cart" asp-action="RemoveFromCart" asp-route-removeProductId="@cartProduct.IdProduct"> <img class="mb-1" src="~/img/trash2.svg" /></a>
 							</div>
 						</div>
