--- a/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
@@ -66,10 +66,10 @@
 	<img class="img-fluid rounded carte" src="~/img/Stripe.png"/>
 </span>
 <script>
-	// const btnPaga = document.getElementById('btnPaga');
+	const btnPaga = document.getElementById('btnPaga');
 
-	// btnPaga.addEventListener('click', () => {
-	// 	alert('Pagamento effettuato con successo!');
-	// });
+	btnPaga.addEventListener('click', () => {
+		alert('Pagamento effettuato con successo!');
+	});
 
 </script>
