--- a/BUILD-WEEK-4_TEAM-7/Views/Admin/Admin.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Admin/Admin.cshtml
@@ -43,7 +43,7 @@
                     {
                         <div class="col-lg-3 col-md-4 col-sm-6">
                             <div class="card cardAdmin my-2">
-                                <img src="@product.ImageURL" class="card-img-top pt-4">
+                                <img src="@product.ImageURL" class="card-img-top pt-4 mx-auto">
                                 <div class="card-body d-flex flex-column">
                                     <h5 class="card-title">@product.ProductName</h5>
                                     <p class="card-text">@product.Price.ToString("C")</p>
