--- a/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Home/Index.cshtml
@@ -44,9 +44,6 @@
                 <div id=@carouselId class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
 
-
-                        // .Where(p => p.Stock != 0).ToList()
-
                         @for (int i = 0; i < productGroups.Count; i++)
                         {
                             <div class="carousel-item @(i == 0 ? "active" : "")">
@@ -54,9 +51,9 @@
                                     <div class="row">
                                         @foreach (var product in productGroups[i])
                                         {
-                                            <div class="col-12 col-md-6 col-lg-3">
+                                            <div class="col-12 col-md-6 col-lg-3 mb-3">
                                                 <div class="card cardHome">
-                                                    <img src="@product.ImageURL" class="card-img-top pt-4" alt="@product.ProductName">
+                                                    <img src="@product.ImageURL" class="card-img-top pt-4 mx-auto" alt="@product.ProductName">
                                                 
                                                      <div class="card-body">
                                                         <h5 class="card-title text-center product-name">@product.ProductName</h5>
