Sistemate alcune cose, tra cui pagina 404

--- a/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Cart/Checkout.cshtml
@@ -39,7 +39,7 @@
 		</div>
 
 		<form class="form-control" method="get" asp-controller="cart" asp-action="FinalizeCheckout">
-			<button type="submit" class="btn btn-home" id="btnPaga">Paga!</button>
+			<button type="submit" class="btn btn-home btn-animation" id="btnPaga">Paga!</button>
 		</form>
 	} else
 	{
