Link footer per reindirizzare alla pag. 404

--- a/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Shared/_Layout.cshtml
@@ -107,10 +107,11 @@
                 <div class="col-md-3 mt-3 d-flex flex-column align-items-center">
                     <h5 class="text-white fw-bolder">Link Utili</h5>
                     <ul class="list-unstyled">
-                        <li><a href="javascript:void(0)" class="text-white mb-1">Chi Siamo</a></li>
-                        <li><a href="javascript:void(0)" class="text-white mb-1">Contattaci</a></li>
-                        <li><a href="javascript:void(0)" class="text-white mb-1">Lavora con Noi</a></li>
-                        <li><a href="javascript:void(0)" class="text-white mb-1">FAQ</a></li>
+                        <li><a href="chi-siamo" class="text-white mb-1">Chi Siamo</a></li>
+                        <li><a href="contattaci" class="text-white mb-1">Contattaci</a></li>
+                        <li><a href="lavora-con-noi" class="text-white mb-1">Lavora con Noi</a></li>
+                        <li><a href="faq" class="text-white mb-1">FAQ</a></li>
+                        <li><a href="premium" class="text-white mb-1">Premium</a></li>
                     </ul>
                 </div>
                 <!-- Sezione Social -->
