--- a/BUILD-WEEK-4_TEAM-7/Views/Search/Index.cshtml
+++ b/BUILD-WEEK-4_TEAM-7/Views/Search/Index.cshtml
@@ -43,7 +43,7 @@
         @foreach(var prod in Model.SearchedProducts) {
 					<div class="col-12 col-md-6 col-lg-3 mt-3">
 						<div class="card" style="height: 24rem;">
-							<img src="@prod.ImageURL" class="card-img-top mx-auto" alt="@prod.ProductName">
+							<img src="@prod.ImageURL" class="card-img-top pt-4 mx-auto" alt="@prod.ProductName">
 							<div class="card-body">
 								<h5 class="card-title text-center">@prod.ProductName</h5>
 								<h5 class="card-title text-center">Cat.: @prod.CategoryName</h5>
